fixed index.html page

--- a/index.html
+++ b/index.html
@@ -34,21 +34,23 @@
     </header>
     <main>
         <div class="profile">
-            <img src="img/tamarphoto.jpg" class="profile__portrait" alt="photo of me">
+            <div class="profile__container">
+                <img src="img/tamarphoto.jpg" class="profile__portrait" alt="photo of me">
+            </div>
             <h1>Welcome to my web developer portfolio!</h1>
-            <div>
-            <p>
-                I am Tamar Omsarashvili, transitioning from a retail background to web development.
-            </p> 
-            <p> 
-                I've dedicated myself to learning web development concepts, languages, and frameworks. My portfolio showcases projects that demonstrate 
-                my growth, ranging from static websites to dynamic applications. Combining attention to detail and a passion for exceptional 
-                user experiences, I offer a unique perspective. Continuously seeking growth and staying updated, I'm excited to collaborate and 
-                contribute to the digital landscape. 
-            </p>
-            <a href="https://github.com/tamomsi">check out some of my code</a>
+            <div id="text__portfolio">
+                <p>
+                    I am Tamar Omsarashvili, transitioning from a retail background to web development.
+                </p> 
+                <p> 
+                    I've dedicated myself to learning web development concepts, languages, and frameworks. My portfolio showcases projects that demonstrate 
+                    my growth, ranging from static websites to dynamic applications. Combining attention to detail and a passion for exceptional 
+                    user experiences, I offer a unique perspective. Continuously seeking growth and staying updated, I'm excited to collaborate and 
+                    contribute to the digital landscape. 
+                </p>
+                <a href="https://github.com/tamomsi">check out some of my code</a>
+            </div>
         </div>
-    </div>
     </main>
     <footer class="page-footer">
         <p>
