fixed the contact table and added svg icons

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>contact Tamar Omsarashvili</title>
+    <title>Contact Tamar Omsarashvili</title>
     <link rel="shortcut icon" href="./img/favicon-32x32.png">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -37,15 +37,43 @@
         <h1>Contact</h1>
         <div>
             <div class="address">
-                <p>Based in Freiburg im Breisgau, Germany</p> 
+                <p>Based in Freiburg im Breisgau, Germany</p>
             </div>
             <br>
-            <div class="contact-details">
-                <a href="tel:+49123456789">Click here to call me</a> <br>
-                Email: <a href="mailto:t_omsara@yahoo.com">t_omsara@yahoo.com</a> <br>
-                Skype: <a href="skype:Tamar Omsarashvili">Tamar Omsarashvili</a> <br>
-                <a href="mailto:t_omsara@yahoo.com">contact me via email</a>
-            </div>
+            <table class="contact-details">
+                <tr>
+                    <td>
+                        <img src="img/call.svg" alt="Phone Icon">
+                    </td>
+                    <td>
+                        <a href="tel:+49123456789">Contact me via phone</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="img/email.svg" alt="Email Icon">
+                    </td>
+                    <td>
+                        <a href="mailto:t_omsara@yahoo.com">t_omsara@yahoo.com</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="img/skype.svg" alt="Skype Icon">
+                    </td>
+                    <td>
+                        <a href="skype:Tamar Omsarashvili">Tamar Omsarashvili</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="img/send.svg" alt="Email Icon">
+                    </td>
+                    <td>
+                        <a href="mailto:t_omsara@yahoo.com">Contact me via email</a>
+                    </td>
+                </tr>
+            </table>
         </div>
     </main>
     <footer class="page-footer">
@@ -58,7 +86,8 @@
                     <a href="https://github.com/" target="_blank"><img src="img/github.svg" alt="Github"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/tamar-omsarashvili-69a517154/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="https://www.linkedin.com/in/tamar-omsarashvili-69a517154/" target="_blank"><img
+                            src="img/linkedin.svg" alt="LinkedIn"></a>
                 </li>
                 <li>
                     <a href="https://twitter.com/TamarOmsara" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
